[package]
authors = ["Hayato Ito <hayato@google.com>"]
description = "A simple, fast, opinioned static site generator"
edition = "2021"
license = "Apache-2.0"
name = "site"
readme = "README.md"
repository = "https://github.com/hayatoito/site"
version = "0.8.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
glob = "0.3.1"
log = "0.4.22"
minijinja = { version = "2.1.1", features = ["loader"] }
pretty_env_logger = "0.5.0"
pulldown-cmark = "0.11.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
unicode-width = "0.1.13"
walkdir = "2.5.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"
