[package]
authors = ["Hayato Ito <hayatoito@gmail.com>"]
description = "A simple, fast, opinioned static site generator"
edition = "2024"
license = "Apache-2.0"
name = "site"
readme = "README.md"
repository = "https://github.com/hayatoito/site"
version = "0.9.0"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
minijinja = { version = "2.3.1", features = ["loader"] }
pulldown-cmark = "0.12.2"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
unicode-width = "0.2.0"
walkdir = "2.5.0"
orgize = "0.9.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"
