[package]
authors = ["Hayato Ito <hayatoito@gmail.com>"]
description = "A simple, fast, opinionated static site generator"
edition = "2024"
license = "Apache-2.0"
name = "site"
readme = "README.md"
repository = "https://github.com/hayatoito/site"
version = "1.1.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.28"
minijinja = { version = "2.12.0", features = ["loader"] }
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
unicode-width = "0.2.2"
walkdir = "2.5.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.42"
